Fixed a minor issue with the alignment of top bar elements.

--- a/src/main/webapp/css/topnav.css
+++ b/src/main/webapp/css/topnav.css
@@ -14,7 +14,7 @@ html, body {
 
 .topnav-grid {
 	display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto; 
+    grid-template-columns: auto auto auto auto auto auto; 
     grid-auto-flow: column; /*Makes items flow across columns into a single row*/ 
 	width: 100%;
 	height: 100%;
